<resources>
    <string name="appName">Dotify</string>
    <string name="defaultUsername">Amanda Park</string>
    <string name="albumAlt">This is an ablbum cover by amazong singer named Doraemon</string>
    <string name="albumTitle">My friend Doraemon</string>
    <string name="artistName">Doraemon</string>
    <string name="prevBtnDescription">This button takes back to the previous song</string>
    <string name="playBtnDescription">This button can toggle between play and pause music</string>
    <string name="nextBtnDescription">This button takes back to the next song</string>
    <string name="shuffleBtnText">shuffle</string>
    <string name="songContainer">%s - %s</string>
    <string name="deleteMessage">%s has been clicked to remove.</string>
    <string name="profile">PROFILE</string>
    <string name="profileStatistics">PROFILE STATISTICS</string>
    <string name="profileAbout">ABOUT</string>
    <string name="email">Email: wd1204@uw.edu</string>
    <string name="joinedDate">Joined Date: 10/23/21</string>
    <string name="nickname">Nickname: Cute Cat</string>
    <string name="about_creator">Creator: Amanda Park</string>
    <string name="about_website">erichee.com</string>
    <string name="version">Version: %s</string>
    <string name="statInfo">Title: %s - Count: %d</string>
    <string name="playNum"> %s Plays </string>
    <string name="settings">Settings</string>
    <string name="userNamePlaceholder">Username</string>
    <string name="fetchError">User profile download failed</string>
    <string name="profileDescription">User profile pic</string>
    <string name="updateMsg">New Song Notification</string>
    <string name="notification_artist_format">New Song Updated By %s</string>
    <string name="new_song_channel">New Song Channel</string>
    <string name="newSongMsg">%s just released a new song!!!</string>
    <string name="newSongMsg2">Listen to %s now on Dotify</string>

</resources>