<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment"
    android:orientation="vertical">

    <Button
        android:id="@+id/profileBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:layout_margin="@dimen/settingsBtnMargin"
    />

    <Button
        android:id="@+id/StatisticsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profileStatistics"
        android:layout_margin="@dimen/settingsBtnMargin"
    />

    <Button
        android:id="@+id/aboutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profileAbout"
        android:layout_margin="@dimen/settingsBtnMargin"
    />





</LinearLayout>