<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/profilePicture"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/settingsProfileUsername"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/doraemon"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/settingsProfileUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultUsername"
        android:textSize="@dimen/username"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/profilePicture"
        app:layout_constraintBottom_toTopOf="@id/profileContainer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/profileContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsProfileUsername"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical" >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="@dimen/defaultTextSize"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/profilePicture"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/joinedDate"
            android:textSize="@dimen/defaultTextSize"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/profilePicture"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textSize="@dimen/defaultTextSize"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/profilePicture"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>