<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screenPadding"
    tools:context=".MainActivity">
    <!--maybe guard?-->

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/defaultUsername"
        android:textColor="@color/black"
        android:textSize="@dimen/defaultTextSize"
        app:layout_constraintBottom_toBottomOf="@+id/usernameUpdateBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/usernameUpdateBtn" />

    <Button
        android:id="@+id/usernameUpdateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usernameBtnText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_edit_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Username"
        android:inputType="text"
        android:textSize="@dimen/defaultTextSize"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/usernameUpdateBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/usernameUpdateBtn"
        tools:ignore="LabelFor" />

    <!--    Barrier allows you to specify a constraint based on the height of those two TextViews-->
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/userInfoBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="username, usernameUpdateBtn, user_edit_input" />

    <!--    https://stackoverflow.com/questions/47114672/what-is-difference-between-barrier-and-guideline-in-constraint-layout-->
    <!--    image for the cover page-->
    <ImageButton
        android:id="@+id/album_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/albumAlt"
        android:scaleType="fitCenter"
        android:src="@drawable/doraemon"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userInfoBarrier" />

    <!--    app:layout_constraintTop_toBottomOf="@id/guidelineImage"-->
    <TextView
        android:id="@+id/album_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/albumTextSizePadding"
        android:text="@string/albumTitle"
        android:textColor="@color/black"
        android:textSize="@dimen/albumTitleSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/album_image" />

    <TextView
        android:id="@+id/artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/artistName"
        android:textColor="@color/black"
        android:textSize="@dimen/albumNameSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/album_title" />

    <TextView
        android:id="@+id/num_of_play"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/numOfPlayTopMargin"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/defaultTextSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/artist" />

    <ImageButton
        android:id="@+id/previousBtn"
        android:layout_width="@dimen/fullWidth"
        android:layout_height="@dimen/playBtnTopMargin"
        android:layout_marginTop="@dimen/playBtnTopMargin"
        android:background="@android:color/transparent"
        android:contentDescription="@string/playBtnDescription"
        android:scaleType="fitCenter"
        android:src="@drawable/prev_play_btn"
        app:layout_constraintEnd_toStartOf="@+id/playBtn"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_of_play" />


    <ImageButton
        android:id="@+id/playBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/playBtnDescription"
        android:scaleType="fitXY"
        android:src="@drawable/play_btn1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nextPlayBtn"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/previousBtn"
        app:layout_constraintTop_toBottomOf="@+id/num_of_play"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/nextPlayBtn"
        android:layout_width="@dimen/fullWidth"
        android:layout_height="@dimen/playBtnTopMargin"
        android:layout_marginTop="@dimen/playBtnTopMargin"
        android:background="@android:color/transparent"
        android:contentDescription="@string/nextBtnDescription"
        android:scaleType="fitCenter"
        android:src="@drawable/next_play_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/playBtn"
        app:layout_constraintTop_toBottomOf="@+id/num_of_play" />


</androidx.constraintlayout.widget.ConstraintLayout>